--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -1,8 +1,5 @@
 <resources>
-    <string name="app_name">ShashlikSsytem</string>
-
-    <string name="hello_world">Hello world!</string>
+    <string name="app_name">Anbox</string>
     <string name="action_settings">Settings</string>
-    <string name="service_name">Shashlik Service</string>
-
+    <string name="service_name">Anbox Service</string>
 </resources>
